package humans.interfaces;

public interface Fall {
    public void fall();
}
