package humans.interfaces;

import humans.Human;

public interface GoAfter {
    public  void goAfter(Human h1,Human h2);
}
