package humans.interfaces;

public interface Look {
    public void look();
}
