package humans.interfaces;

public interface Sigh {
    public void sigh();
}
