package humans.interfaces;

import humans.enums.HeadPosition;

public interface TurnHead {
    public void turnHead(HeadPosition position);
}
