package subject;

public class Subjects {
    String name;

    public Subjects(String name){
        this.name = name;
    }
    @Override
    public String toString(){
        return name;
    }
}

