package subject.interfaces;

import humans.Human;

public interface Touch {
    public void touch(Human human);
}
